[package]
name = "ecs-containers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "*"
aws-types = "*"
aws-sdk-ecs = "*"
tokio = { version = "1", features = ["full"] }
ratatui = { version = "*", features = ["all-widgets"] }
anyhow = "*"
crossterm = "*"
